--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,3 +6,5 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+spring.jpa.generate-ddl=false
