--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=DeploySpringBoot
 
-spring.profiles.active=prod
+spring.profiles.active=test
+
+spring.flyway.location=classpath:/db/migration/{vendor}
+# sql 기록
+spring.flyway.baselineOnMigrate=true
+# flyway로 형상 관리
+spring.flyway.enabled=true
