--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=DeploySpringBoot
 
-spring.profiles.active=test
+spring.profiles.active=prod
 
+# schema file 경로 설정
 spring.flyway.location=classpath:/db/migration/{vendor}
 # sql 기록
 spring.flyway.baselineOnMigrate=true
