--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,9 +4,9 @@ spring.datasource.password=${DB_PASSWORD:boot}
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-# entity와 schema mapping 체크
-spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
-# hibernate가 generate하지 못하게 막하줌
+# entity와 schema mapping check
+spring.jpa.hibernate.ddl-auto=validate
+# Hibernate가  ddl을 실행하지 않음
 spring.jpa.generate-ddl=false
